sign in page added

--- a/IOTAGRI/WebContent/index.html
+++ b/IOTAGRI/WebContent/index.html
@@ -299,7 +299,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 								<div>
 									<!--  <div class="profile_img">	-->
-									<button type="button" class="btn btn-info" onclick="location.reload();location.href='sign-in.html'"><b>Admin View</b></button>
+									<button type="button" class="btn btn-info" onclick="location.reload();location.href='sign-in.jsp'"><b>Admin View</b></button>
 										<!--  <span style="background:url(images/user.png) no-repeat center"> </span> 
 										 <div class="user-name">
 											<p>Somnath<span>Khamaru</span></p>
@@ -435,8 +435,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 						<img id='pump' src="images/PumpOFF.gif"  height="100" width="100" class='img-thumbnail'>
 						<h3><div id="pumpstatus">MOTOR OFF</div></h3>
-						<button id='on' type="button" class="btn btn-success active " >ON</button>
-						<button id='off' type="button" class="btn btn-danger disabled">OFF</button>
+						<!--  <button id='on' type="button" class="btn btn-success active " >ON</button>
+						<button id='off' type="button" class="btn btn-danger disabled">OFF</button>-->
 						<br><br>
 					</div>
 				</div>
