salinity sensor added

--- a/IOTAGRI/WebContent/index.html
+++ b/IOTAGRI/WebContent/index.html
@@ -339,23 +339,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div id="page-wrapper">
 				<div class="graphs">
 					<div class="col_4">
-						<div class="col-sm-4 widget widget1">
+						<div class="col-sm-6 widget widget">
 							<!--<div class="r3_counter_box">-->
-							<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Humidity+Variation&type=spline&yaxis=Humudity+%28+%25+%29"></iframe>
+							<iframe width="500" height="270" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Humidity+Variation&type=spline&yaxis=Humudity+%28+%25+%29"></iframe>
 
 							<!--</div>-->
 						</div>
-						<div class="col-sm-4 widget widget1">
+						<div class="col-sm-6 widget widget">
 							<!--<div class="r3_counter_box">-->
-								<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Temperature+Variation&type=spline&yaxis=Temperature%28deg+Celsius%29&yaxismax=45&yaxismin=-5"></iframe>
+								<iframe width="500" height="270" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/2?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Temperature+Variation&type=spline&yaxis=Temperature%28deg+Celsius%29&yaxismax=45&yaxismin=-5"></iframe>
 
 							<!--</div>-->
 						 </div>
-						 <div class="col-sm-4 widget">
+						 </div>
+						 	<div class="clearfix"> </div>
+				<div class="col_4">
+						 <div class="col-sm-6 widget">
 							<!--<div class="r3_counter_box">-->
-								<iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Moisture+Variation&type=spline&yaxis=Moisture+%28+%25+%29+"></iframe>
+								<iframe width="500" height="270" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Moisture+Variation&type=spline&yaxis=Moisture+%28+%25+%29+"></iframe>
 
 							<!--</div>-->
+						</div>
+						<div class="col-sm-6 widget">
+							<!--<div class="r3_counter_box">-->
+								<iframe width="500" height="270" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/227051/charts/4?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=5&title=Soil+Salinity+Variation&type=spline&yaxis=Salinity+%28+%25+%29"></iframe>
+
+							<!--</div>-->
+						</div>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
@@ -372,6 +382,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     									<li><a href="#">Temperature</a></li>
     									<li><a href="#">Humidity</a></li>
    									 	<li><a href="#">Moisture</a></li>
+   									 	<li><a href="#">Salinity</a></li>
  									</ul>
 						</div>
 						<div id="sensor" style="margin-top: -3%; margin-left: 11%; position: absolute; color: blue;"><b>No Sensor Selected</b></div>
