--- a/IOTAGRI/WebContent/index.html
+++ b/IOTAGRI/WebContent/index.html
@@ -634,7 +634,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
         <!--footer section start-->
 			<footer>
-			   <p>&copy 2017 IOT Agriculture. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">IOT Agriculture Team.</a></p>
+			   <p>Internet of Things based Agriculture Project</p>
 			</footer>
         <!--footer section end-->
 
